--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,12 +15,26 @@ h2 {
     margin-left: 10px;
 }
 
-p, a {
+p, a, select, li {
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-    margin: 2px;
     margin-left: 10px;
     color: #fff;
+    
+}
+
+select {
+    border: 3px solid var(--primary);
+    padding: 5px;
+    height: 36px;
+    border-radius: 5px;
+    outline: none;
+    vertical-align: top;
+    color: #000;
+}
+
+li {
+    list-style-type: none;
 }
 
 body {
@@ -37,6 +51,7 @@ input {
     color: #000;
     width: 200px;
     margin-left: 10px;
+    margin-bottom: 5px;
     vertical-align: bottom;
 }
 
@@ -52,18 +67,7 @@ button {
     border-radius: 5px;
     cursor: pointer;
     margin-left: 10px;
-    margin-top: 5px;
-    vertical-align: bottom;
-}
-
-select {
-    font-size: 16px;
-    border: 3px solid var(--primary);
-    padding: 5px;
-    height: 36px;
-    border-radius: 5px;
-    outline: none;
-    color: #000;
+    vertical-align: top;
 }
 
 a {
@@ -86,14 +90,17 @@ a:hover {
     margin-left: 10px;
 }
 
-#mainSearchResults {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
+#mainSearchResults, #lists {
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 10px;
     padding: 10px;
+}
+
+#mainSearchResults {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
 
 .hero-block {
